Bumping up Spark